# graspit_python_node

./: .gitignore  .gitmodules  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
launch/: fake_graspit_ros_server.launch
nodes/: graspit_commands.py  graspit_server.py
scripts/: graspit_commands.py  graspit_server.py  remote_launch.bash  remote_launch.py
src/: fake_graspit_ros_server.py  graspit_mock_services.py  graspit_protobuf_socket.py  graspit_protobuf_tests.py  graspit_ros_pointcloud_relay.py  graspit_ros_server.py  integration_tests.py  ros_interface.py  test_graspit_ros_server.py
src/gen_proto/: GraspitMessage_pb2.py  Renderable_pb2.py  check_grasp_reachability_pb2.py  check_grasp_reachability_rpcz.py  compressed_image_pb2.py  get_option_selection_pb2.py  get_option_selection_rpcz.py  image_pb2.py
src/old/: graspit_server.py
src/ros_request_handlers/: ros_interface.py  ros_request_handlers.py
src/ros_services/: base_service.py  camera_origin_service.py  check_grasp_reachability_service.py  execute_grasp_service.py  object_recognition_service.py  recognition_service.py
src/rpcz_services/: base_service.py  camera_origin_service.py  check_grasp_reachability_service.py  execute_grasp_service.py  get_option_selection.py  mock_rpcz_services.py  object_recognition_service.py  utils.py
src/rpcz_services/canned_proto_responses/: camera_origin_response.saved_proto  object_recognition_response.saved_proto
tests/: test_client.py
